fixed spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,7 +38,8 @@ body {
     text-align: center;
     font-family: $bigtext;
     font-size: 5vw;
-    margin-top: -0.5%;
+    margin-top: -0.3%;
+    margin-bottom: -0.5%;
   }
 }
 
